force-app/main/default/objects/CustomerEnquiry__c/CustomerEnquiry__c.object-meta.xml
<CustomObject>
    <description>This object is used as an alternative to the Opportunity in Customer Communities.</description>
    <label>Customer Enquiry</label>
    <nameField>
        <displayFormat>{YYYY}-{00000}</displayFormat>
        <label>Enquiry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Enquiries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>