force-app/main/default/objects/CustomerEnquiry__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Enquiries</relationshipLabel>
    <relationshipName>Customer_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>