force-app/main/default/objects/CustomerEnquiry__c/fields/CancellationDetails__c.field-meta.xml
<CustomField>
    <fullName>CancellationDetails__c</fullName>
    <inlineHelpText>Please, provide some details of cancellation.</inlineHelpText>
    <label>Cancellation Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>