force-app/main/default/objects/CustomerEnquiry__c/fields/CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>CancellationReason__c</fullName>
    <inlineHelpText>Please, provide a reason for cancelling your enquiry.</inlineHelpText>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No such products</fullName>
            </value>
            <value>
                <fullName>Inappropriate delivery terms</fullName>
            </value>
            <value>
                <fullName>High prices</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>