force-app/main/default/objects/CustomerEnquiry__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Briefly describe your enquiry (what products do you need, amount, terms, etc.)</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>