force-app/main/default/objects/CustomerEnquiry__c/fields/MeasurementUnit__c.field-meta.xml
<CustomField>
    <fullName>MeasurementUnit__c</fullName>
    <label>Measurement Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MeasurementUnits</valueSetName>
    </valueSet>
</CustomField>