force-app/main/default/objects/CustomerEnquiry__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Enquiries</relationshipLabel>
    <relationshipName>Customer_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>