force-app/main/default/objects/CustomerEnquiry__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related order</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Customer Enquiries</relationshipLabel>
    <relationshipName>Customer_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>