force-app/main/default/objects/CustomerEnquiry__c/fields/SalesRepId__c.field-meta.xml
<CustomField>
    <fullName>SalesRepId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A contact person assigned for processing this enquiry</inlineHelpText>
    <label>Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Id</field>
            <operation>notEqual</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>