force-app/main/default/objects/CustomerEnquiry__c/fields/TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice__c</fullName>
    <description>Total amount sum of the enquiry.</description>
    <inlineHelpText>Total amount sum of the enquiry.</inlineHelpText>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>