force-app/main/default/objects/CustomerEnquiry__c/fields/TotalPrice_Sum__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice_Sum__c</fullName>
    <description>Rollup summary of all enquiry products total prices. Should be hidden on layouts, as it is only used as a helper for TotalPrice__c field.</description>
    <label>Total Price (Sum)</label>
    <summarizedField>CustomerEnquiryProduct__c.TotalPrice__c</summarizedField>
    <summaryForeignKey>CustomerEnquiryProduct__c.CustomerEnquiryId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>