force-app/main/default/objects/CustomerEnquiry__c/fields/TotalQuantity__c.field-meta.xml
<CustomField>
    <fullName>TotalQuantity__c</fullName>
    <label>Total Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>