force-app/main/default/objects/CustomerEnquiry__c/fields/TotalQuantity_Sum__c.field-meta.xml
<CustomField>
    <fullName>TotalQuantity_Sum__c</fullName>
    <description>Total quantity of the opportunity products.</description>
    <inlineHelpText>Total quantity of the opportunity products.</inlineHelpText>
    <label>Total Quantity</label>
    <summarizedField>CustomerEnquiryProduct__c.Quantity__c</summarizedField>
    <summaryForeignKey>CustomerEnquiryProduct__c.CustomerEnquiryId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>