force-app/main/default/objects/CustomerEnquiry__c/fields/TotalQuantity_t__c.field-meta.xml
<CustomField>
    <fullName>TotalQuantity_t__c</fullName>
    <description>Total quantity of products in metric tons.</description>
    <inlineHelpText>Total quantity of products in metric tons.</inlineHelpText>
    <label>Total Quantity (t)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>