force-app/main/default/objects/CustomerEnquiry__c/fields/TotalQuantity_t_Sum__c.field-meta.xml
<CustomField>
    <fullName>TotalQuantity_t_Sum__c</fullName>
    <description>Total quantity of products in metric tons (summarized from product records).</description>
    <inlineHelpText>Total quantity of products in metric tons (summarized from product records).</inlineHelpText>
    <label>Total Quantity (t)</label>
    <summarizedField>CustomerEnquiryProduct__c.Quantity_t__c</summarizedField>
    <summaryForeignKey>CustomerEnquiryProduct__c.CustomerEnquiryId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>