force-app/main/default/objects/CustomerEnquiry__c/recordTypes/Tubes.recordType-meta.xml
<RecordType>
    <fullName>Tubes</fullName>
    <active>true</active>
    <description>Tubular products (pipes, couplings, joints, etc.)</description>
    <label>Tubes</label>
</RecordType>