force-app/main/default/objects/CustomerEnquiry__c/recordTypes/Wheels.recordType-meta.xml
<RecordType>
    <fullName>Wheels</fullName>
    <active>true</active>
    <description>Railway products (wheels, axes, wheel sets, etc.)</description>
    <label>Wheels</label>
</RecordType>