force-app/main/default/objects/CustomerEnquiry__c/listViews/All_Enquiries.listView-meta.xml
<ListView>
    <fullName>All_Enquiries</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>SalesRepId__c</columns>
    <columns>TotalPrice__c</columns>
    <columns>Status__c</columns>
    <columns>OpportunityId__c</columns>
    <columns>OrderId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Enquiries</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>